--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "webpack-cli": "^6.0.1"
     },
     "scripts": {
-        "dev": "webpack --mode development --watch"
+        "dev": "webpack --mode development --watch",
+        "build": " webpack --mode production"
     }
 }
-
